1.5.9: 
 * Fixed a Chrome/Safari bug in which ending a link didn't always work.

1.5.8: November 24, 2008
 * Fixed a bug that prevented notes from being automatically saved in certain
   notebooks.
 * Fixed a rare bug in which Luminotes sometimes indicated that the current
   note was saved even when it wasn't.
 * Fixed a bug that prevented deleted notes from being displayed within the
   trash.

1.5.7: November 18, 2008
 * Rearranged the links on the left and right side of the wiki editing page
   so that the note title links have a little more horizontal breathing room.
 * You can now add an existing note directly to the note tree, instead of
   having to click "options" -> "show on startup".
 * Improved site navigation by adding more useful links to the page footer.
 * Converted the Luminotes blog to work like a forum, so now you can post
   comments on Luminotes blog posts.
 * You can now subscribe to an RSS feed in order to follow a whole Luminotes
   discussion forum.
 * The listing of threads in a discussion forum now shows how many posts
   there are in each thread.
 * Fixed a bug in which search result note summaries were not showing the
   portion of the note that matched the search term. (Luminotes Server)
 * Fixed a visual bug in which undoing the deletion of a note didn't always
   make the note reappear, even though the undeletion always worked.
 * NOTE: After upgrading to this release, you must restart memcached to clear
   the cache. Failing to do so will cause errors with the Notebook object.
   This does not apply to Luminotes Desktop.

1.5.6: November 12, 2008
 * Greatly improved the speed of wiki searching for Luminotes Server and
   luminotes.com. Also included a section on search performance within the
   INSTALL file.
 * Added permalinks to blog and discussion forum posts.
 * Fixed a bug in Internet Explorer in which clicking a link sometimes caused
   the browser window to scroll to the destination note, only to immediately